//   Copyright 2020 Google LLC
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.

syntax = "proto3";

package googleidentity.oauth2.token;

option java_package = "com.google.googleidentity.oauth2.token";
option java_multiple_files = true;

// Store oauth2 access token information
message OAuth2AccessToken {

  // OAuth2AccessToken value
  string access_token = 1;

  // Token clientID
  string client_id = 2;

  // Token username
  string username = 3;

  // Whether token scoped is limited
  bool is_scoped = 4;

  // Token scopes
  repeated string scopes = 5;

  // Token expired time
  int64 expired_time = 6;

  // Refresh Token value, used when return refresh_token
  // in authorization code grant type
  string refresh_token = 7;
}
